# ToDoTestProject

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
config/: authentication.py  settings.py  urls.py
src/parser/: models.py  serializers.py  urls.py  utils.py  views.py
src/parser/migrations/: 0001_initial.py
src/tasks/: admin.py  models.py  serializers.py  tests.py  views.py
src/tasks/migrations/: 0001_initial.py
src/todo_api/: authentication.py  settings.py  urls.py  utils.py
src/users/: serializers.py  urls.py  views.py
tasks/: models.py  views.py
tasks/migrations/: 0001_initial.py
users/: urls.py  views.py
